Fix multiselect placeholder and z-index

--- a/templates/_components/multiselect/multiselect.css
+++ b/templates/_components/multiselect/multiselect.css
@@ -88,6 +88,7 @@
   padding: 0.25rem 0;
   position: absolute;
   width: 100%;
+  z-index: 100;
 }
 
 .multiselect__option,
